--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "astro": "astro"
   },
   "devDependencies": {
-    "astro": "^5.1.7"
+    "astro": "^5.1.7",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3"
   }
 }
