--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bordart-landing-page",
+  "name": "bordart",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -8,8 +8,14 @@
     "preview": "astro preview",
     "astro": "astro"
   },
+  "dependencies": {
+    "astro": "^5.1.5",
+    "solid-js": "^1.9.4"
+  },
   "devDependencies": {
-    "astro": "^5.1.7",
+    "@astrojs/tailwind": "^5.1.4",
+    "@types/node": "^22.10.7",
+    "autoprefixer": "^10.4.20",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3"
   }
