--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,6 @@
     "@/*": ["src/*"]
     }
 },
-"include": ["src/**/*"],
+"include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.js", "src/**/*.jsx", "!src/**/*.astro"],
 "exclude": ["dist", "node_modules"]
 }
